--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
       #es-effaclar.es-effaclar .es-kv__img--badge {
         padding: 0;
         padding-bottom: 16px;
-        margin-left: -5%;
+        margin-left: 0;
       }
 
       #es-effaclar.es-effaclar .es-kv__img--first {
@@ -739,7 +739,7 @@
         position: absolute;
         z-index: 61;
         top: 210px;
-        left: 18%;
+        left: 21%;
         width: 300px;
         font-size: 9px;
       }
