--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
       #es-effaclar.es-effaclar .es-kv__img--badge {
         padding: 0;
         padding-bottom: 16px;
-        margin-left: 0;
+        margin-left: 5px;
       }
 
       #es-effaclar.es-effaclar .es-kv__img--first {
