--- a/index.html
+++ b/index.html
@@ -1167,7 +1167,7 @@
     </div>
 
     <div class="es-routine">
-      <h3 class="es-routine__title"><strong>PRIEŽIŪRA</strong></h3>
+      <h3 class="es-routine__title"><strong>ODOS PRIEŽIŪROS RUTINA</strong></h3>
       <div class="es-routine__container">
         <img src="assets/img/bg2.png" alt="" class="es-routine__img" />
         <div class="es-routine__single es-routine__single--1">
