--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     }
 
     #es-effaclar.es-effaclar .es-kv__packshot:hover .es-kv__img-packshot {
-      transform: scale(1.1);
+      transform: scale(1.05);
     }
 
     #es-effaclar.es-effaclar .es-kv__disclaimer {
@@ -206,7 +206,7 @@
 
     #es-effaclar.es-effaclar .es-serum {
       margin-bottom: 32px;
-      padding: 16px;
+      padding: 30px;
     }
 
     #es-effaclar.es-effaclar .es-serum__title {
@@ -953,7 +953,7 @@
           </h2>
         </div>
         <div class="es-kv__photo">
-          <img src="assets/img/kv2.png" alt="" class="es-kv__img es-kv__img--badge es-kv__img--desktop" />
+          <img src="assets/img/kv2.jpg" alt="" class="es-kv__img es-kv__img--badge es-kv__img--desktop" />
           <div class="es-kv__badge es-kv__badge--mobile">
             <img src="assets/img/kv-mb.jpg" alt="" class="es-kv__img es-kv__img--badge" />
           </div>
